# arachne

./: .editorconfig  .env.example  .env.ollama.example  .gitattributes  .gitignore  .python-version  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README-config-note.md  README.md  ROADMAP.md  SECURITY.md  patch_ollama.diff  pr_description.md  pyproject.toml  quickstart.sh
.Jules/: palette.md  sentinel.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.jules/: bolt.md  palette.md  sentinel.md
docs/: configuration.md  environment-setup.md  index.md  troubleshooting.md
docs/architecture/: graph-orchestration.md  mcp-integration.md  overview.md  self-healing.md
docs/explanation/: architecture.md
docs/guides/: creating-skills.md  developer-guide.md  getting-started.md  mcp-setup.md  testing.md
docs/key_concepts/: dspy-native.md  pointer-pattern.md  triangulated-evaluation.md
docs/reference/: cli.md  coding-standards.md  schema.md  security.md
docs/roadmap/: contributing.md
docs/tutorials/: getting-started.md
src/arachne/: __init__.py  config.py  core.py  ports.py  utils.py
src/arachne/cli/: display.py  main.py
src/arachne/execution/: manager.py
src/arachne/optimizers/: __init__.py  weaver_compiler.py  weaver_demos.py
src/arachne/runtime/: __init__.py  auto_healer.py  clarifier.py  context_store.py  evaluator.py  knowledge_store.py  mcp_manager.py  ollama_manager.py  provision.py  schemas.py  search_memory.py  token_manager.py
src/arachne/sessions/: __init__.py  manager.py
src/arachne/skills/: registry.py
src/arachne/skills/default/: error-recovery.md  task-decomposition.md
src/arachne/skills/default/creative/excalidraw/scripts/: upload.py
src/arachne/skills/default/gaming/pokemon-player/: SKILL.md
src/arachne/skills/default/media/youtube-content/scripts/: fetch_transcript.py
src/arachne/skills/default/productivity/google-workspace/scripts/: google_api.py  gws_bridge.py  setup.py
src/arachne/skills/default/productivity/maps/scripts/: maps_client.py
src/arachne/skills/default/red-teaming/godmode/scripts/: auto_jailbreak.py  godmode_race.py  load_godmode.py  parseltongue.py
src/arachne/tools/: __init__.py  spillover.py
src/arachne/tools/execution/: python_sandbox.py
src/arachne/tools/human/: request_approval.py  request_context.py
src/arachne/tools/lifecycle/: checkpoints.py
src/arachne/tools/math/: calculator.py
src/arachne/tools/memory/: operations.py
src/arachne/tools/session/: list_files.py  read_file.py  status.py
src/arachne/tools/skills/: get_details.py  list_categories.py  search.py
src/arachne/tools/system/: file_read.py  file_write.py  shell.py  system_time.py
src/arachne/tools/web/: __init__.py  _browser_logging.py  _langfuse_telemetry.py  arxiv_search.py  browser_search.py  browser_visit.py  crawl4ai_fetch.py  deep_research.py  duckduckgo_search.py  google_scraper.py  jina.py  screenshot.py  search_history.py  web_fetch.py  wikipedia_search.py
src/arachne/topologies/: __init__.py  node_executor.py  schema.py  tool_resolver.py  wave_executor.py  weaver.py
tests/: __init__.py  conftest.py  test_application_workflow_e2e.py  test_arachne.py  test_arxiv_search.py  test_auto_healer.py  test_config.py  test_coverage_fill.py  test_e2e.py  test_execution_manager.py  test_graph_output_validation.py  test_healer_integration.py  test_hitl_feedback.py  test_integration_llm.py  test_mcp_context7.py  test_mcp_integration.py  test_node_executor_stability.py  test_schemas.py  test_search_memory.py  test_settings_cache.py  test_token_manager.py  test_tool_resolver.py  test_topologies_schema.py  test_wave_executor.py  test_wave_executor_full.py
tests/tools/: test_browser_config.py  test_execution.py  test_human.py  test_math.py  test_memory.py  test_path_traversal.py  test_session.py  test_skills.py  test_system.py  test_web.py  test_web_hardened.py
