[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arachne"
version = "0.1.0"
description = "A runtime harness for production AI agents -- describe your goal in natural language, Arachne weaves the agent graph, executes it with full observability, and evolves on failure."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Dan", email = "dan@strategicautomation.com" },
]
keywords = ["ai", "agents", "dspy", "graph", "self-healing", "llm", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "dspy>=3.1.3,<3.2",
    "litellm>=1.83.3,<1.84",
    "pydantic>=2.12,<2.13",
    "pydantic-settings>=2.13,<2.14",
    "langfuse>=4.0.6,<4.1",
    "openinference-instrumentation-dspy>=0.1.34,<0.2",
    "opentelemetry-sdk>=1.40.0,<1.41",
    "opentelemetry-api>=1.40.0,<1.41",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0,<1.41",
    "structlog>=25.5,<25.6",
    "playwright>=1.58,<1.59",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2,<6.1",
    "ddgs>=9.13,<9.14",
    "rich>=14.3,<14.4",
    "mcp>=1.27.0,<1.28",
    "nest-asyncio>=1.6.0,<1.7",
    "questionary>=2.1.1,<2.2",
    "browser-use>=0.11.13",
    "googlesearch-python>=1.3.0",
    "arxiv>=3.0.0",
    "wikipedia-api>=0.10.0",
    "langchain-openai>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/Strategic-Automation/arachne"
Repository = "https://github.com/Strategic-Automation/arachne"
"Bug Tracker" = "https://github.com/Strategic-Automation/arachne/issues"
Changelog = "https://github.com/Strategic-Automation/arachne/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.15,<0.16",
    "pytest>=9.0,<9.1",
    "pytest-asyncio>=1.0,<1.4",
    "pytest-cov>=7.1,<7.2",
    "pre-commit>=4.5,<4.6",
]

[project.scripts]
arachne = "arachne.cli.main:main"

# =====================================================
# Ruff -- linting and formatting
# =====================================================

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "I",       # isort
    "N",       # pep8-naming
    "W",       # pycodestyle warnings
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
    "SIM",     # flake8-simplify
    "RUF",     # ruff-specific rules
    "TCH",     # flake8-type-checking
    "FA",      # flake8-future-annotations
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "TC001",   # move application import into type-checking block
    "TC002",   # move third-party import into type-checking block
    "TC003",   # move standard library import into type-checking block
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"examples/*" = ["S101"]
"src/arachne/skills/default/red-teaming/godmode/scripts/*" = ["RUF001", "RUF003", "F821", "SIM115", "E402", "N806"]
"src/arachne/skills/default/media/youtube-content/scripts/fetch_transcript.py" = ["E741"]
"src/arachne/skills/default/productivity/google-workspace/scripts/google_api.py" = ["E741"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =====================================================
# Pytest
# =====================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
    "llm: marks tests that require a real LLM (Ollama or OpenRouter)",
]

# =====================================================
# Coverage
# =====================================================

[tool.coverage.run]
source = ["src/arachne"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 54
show_missing = true

# =====================================================
# Pre-commit config
# =====================================================

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.1",
    "pre-commit>=4.5",
]
